--- a/styles/output/python-pdf.css
+++ b/styles/output/python-pdf.css
@@ -269,7 +269,7 @@ pre > span {
 }
 
 pre {
-  white-space: pre-wrap;
+  white-space: pre-line;
 }
 
 pre.inline-code {
